--- a/Heart Disease ML/end-to-end-heart-disease-classification.ipynb
+++ b/Heart Disease ML/end-to-end-heart-disease-classification.ipynb
@@ -4332,12 +4332,11 @@
    "source": [
     "### 6. Experimentation \n",
     "\n",
-    "If you haven't hit your evaluation metric yet... ask yourself...\n",
+    "If we haven't hit the evaluation metric we wanted yet...\n",
     "\n",
-    "* Could you collect more data?\n",
-    "* Could you try a better model? Like CatBoost or XGBoost?\n",
-    "* Could you improve the current models? (beyond what we've done so far)\n",
-    "* If your model is good enough (you have hit your evaluation metrics) how would you export it and share it with others?"
+    "* Could we collect more data?\n",
+    "* Could we try a better model? Like CatBoost or XGBoost?\n",
+    "* Could we improve the current models? (beyond what we've done so far)\n",
    ]
   },
   {
